# daq_lockin

./: .gitignore  README.md  daq_capture.ipynb  pyproject.toml  realtime.py  sr865a_capture.ipynb  sr865a_realtime.py
lockin_vs_daq/: abc_instrument.py  daq.py  helper.py  main.py  plot_realtime.py  plot_timed.py  sr865a.py
software_lockin/: DAQWorker.py  LIAWorker.py  SoftwareLIA..py  SoftwareLIA.py  UI_SoftwareLIA.ui  UI_SoftwareLIA_func.py  UI_SoftwareLIA_ui.py  main.py
