[project]
name = "daq-lockin"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.3",
    "nidaqmx>=1.1.0",
    "pyqtgraph>=0.13.7",
    "pyside6>=6.9.2",
    "pyvisa>=1.15.0",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "srsinst-sr860>=0.3.2",
]
